[tool.poetry]
name = "fluentqa-mddoc-template"
version = "0.1.0"
description = "fluentqa-markdown-docs-site"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.12"
mkdocs = "^1.3.0"
mkdocs-material-extensions = "^1.0.3"
pymdown-extensions = "^9.4"
Pygments = "^2.12.0"
mkdocs-minify-plugin = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
